fix:增加自动刷步提示语

--- a/index.css
+++ b/index.css
@@ -74,6 +74,9 @@ body {
   line-height: 33px;
   padding: 0 20px 0 10px;
   margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .box-warp {
   width: 100%;
