--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ body {
   height: 35px;
   font-size: 16px;
   line-height: 33px;
-  padding: 0 20px 0 10px;
+  /* padding: 0 20px 0 10px; */
   margin-bottom: 10px;
   display: flex;
   align-items: center;
